--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.5",
+    "tone": "^14.7.77",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "main": "index.js",
+  "author": "Ryland Crouse <rmikhailc@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25"
   }
 }
