--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^2.1.3",
