--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/styled-components": "^5.1.26",
     "mobx": "^6.6.1",
     "mobx-react": "^7.5.2",
     "react": "^18.1.0",
@@ -47,7 +48,5 @@
   "main": "index.js",
   "author": "Ryland Crouse <rmikhailc@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "@types/styled-components": "^5.1.25"
-  }
+  "devDependencies": {}
 }
