--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "^8.19.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +16,7 @@
     "mobx-react": "^7.5.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-is": "^18.2.0",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
     "tone": "^14.7.77",
